# aos_core_lib_cpp

./: .gitignore  .markdownlint-cli2.yaml  CLAUDE.md  CMakeLists.txt  README.md  build.sh  codecov.yml  host_build.sh  sonar-project.properties  suppressions.txt
src/: CMakeLists.txt
src/cm/: CMakeLists.txt
src/cm/identifierpool/: identifierpool.cpp
src/cm/launcher/: instancemanager.cpp  launcher.cpp  log.hpp  nodehandler.cpp  servicebalancer.cpp
src/common/: CMakeLists.txt
src/common/crypto/: CMakeLists.txt  crypto.cpp  cryptoutils.cpp
src/common/crypto/mbedtls/: cryptoprovider.cpp  driverwrapper.cpp
src/common/crypto/openssl/: cryptoprovider.cpp  opensslprovider.cpp  seqoid.hpp
src/common/monitoring/: alertprocessor.cpp  average.cpp  resourcemonitor.cpp
src/common/tools/: semver.cpp  timer.cpp  uuid.cpp
src/core/: CMakeLists.txt  testconfig.hpp
src/core/cm/: CMakeLists.txt  config.hpp
src/core/cm/alerts/: CMakeLists.txt  alerts.cpp  alerts.hpp  alerts.md  config.hpp
src/core/cm/cloudprotocol/: CMakeLists.txt  alerts.hpp  certificates.hpp  common.hpp  desiredstatus.hpp  envvars.hpp  log.hpp  monitoring.hpp  protocol.hpp  provisioning.hpp  servicediscovery.hpp  state.hpp  unitstatus.hpp
src/core/cm/communication/: CMakeLists.txt  communication.hpp  communication.md  servicediscovery.hpp
src/core/cm/database/: CMakeLists.txt  database.md
src/core/cm/fileserver/: CMakeLists.txt
src/core/cm/iamclient/: CMakeLists.txt  iamclient.md
src/core/cm/imagemanager/: CMakeLists.txt  config.hpp  imagemanager.cpp  imagemanager.hpp  imagemanager.md  imageprovider.hpp
src/core/cm/launcher/: CMakeLists.txt  balancer.cpp  balancer.hpp  config.hpp  gidpool.cpp  gidpool.hpp  idpool.hpp  imageinfoprovider.cpp  imageinfoprovider.hpp  instance.cpp  instance.hpp  instancemanager.cpp  instancemanager.hpp  launcher.cpp  launcher.hpp  launcher.md  networkmanager.cpp  networkmanager.hpp  node.cpp  node.hpp  nodeitf.hpp  nodemanager.cpp  nodemanager.hpp  overrideenvvarsprocessor.cpp  overrideenvvarsprocessor.hpp  rankederror.hpp  runrequestsloader.cpp  runrequestsloader.hpp  storage.hpp  storagestate.cpp  storagestate.hpp  utils.hpp
src/core/cm/monitoring/: CMakeLists.txt  config.hpp  monitoring.cpp  monitoring.hpp  monitoring.md
src/core/cm/networkmanager/: CMakeLists.txt  networkmanager.hpp  networkmanager.md
src/core/cm/nodeinfoprovider/: CMakeLists.txt  config.hpp  nodeinfocache.cpp  nodeinfocache.hpp  nodeinfoprovider.cpp  nodeinfoprovider.hpp  nodeinfoprovider.md
src/core/cm/resourcemanager/: CMakeLists.txt  resourcemanager.hpp
src/core/cm/smcontroller/: CMakeLists.txt  smcontroller.md
src/core/cm/statushandler/: CMakeLists.txt
src/core/cm/storagestate/: CMakeLists.txt  config.hpp  storagestate.cpp  storagestate.hpp  storagestate.md
src/core/cm/tests/: CMakeLists.txt
src/core/cm/unitconfig/: CMakeLists.txt  config.hpp  unitconfig.cpp  unitconfig.hpp  unitconfig.md
src/core/cm/updatemanager/: CMakeLists.txt  config.hpp  desiredstatushandler.cpp  desiredstatushandler.hpp  unitstatushandler.cpp  unitstatushandler.hpp  updatemanager.cpp  updatemanager.hpp  updatemanager.md
src/core/common/: CMakeLists.txt  config.hpp  consts.hpp
src/core/common/alerts/: CMakeLists.txt  alerts.hpp
src/core/common/blobinfoprovider/: CMakeLists.txt
src/core/common/cloudconnection/: CMakeLists.txt
src/core/common/cloudprotocol/: CMakeLists.txt  alerts.hpp  certificates.hpp  cloudmessage.hpp  cloudprotocol.hpp  common.hpp  desiredstatus.hpp  envvars.hpp  log.hpp  monitoring.hpp  protocol.hpp  provisioning.hpp  servicediscovery.hpp  state.hpp  unitstatus.hpp
src/core/common/connectionprovider/: CMakeLists.txt  connectionprovider.hpp
src/core/common/crypto/: CMakeLists.txt  asn1.cpp  certloader.cpp  certloader.hpp  crypto.cpp  crypto.hpp  crypto.md  cryptohelper.cpp  cryptohelper.hpp  cryptoprovider.hpp  cryptoutils.cpp  cryptoutils.hpp
src/core/common/downloader/: CMakeLists.txt  downloader.hpp
src/core/common/iamclient/: CMakeLists.txt  iamclient.md
src/core/common/identhandler/: CMakeLists.txt  identhandler.hpp
src/core/common/identprovider/: CMakeLists.txt  identprovider.md
src/core/common/instancestatusprovider/: CMakeLists.txt
src/core/common/logging/: CMakeLists.txt  config.hpp
src/core/common/logprovider/: CMakeLists.txt  config.hpp
src/core/common/monitoring/: CMakeLists.txt  alertprocessor.cpp  alertprocessor.hpp  average.cpp  average.hpp  config.hpp  monitoring.cpp  monitoring.hpp  monitoring.md  resourcemonitor.cpp  resourcemonitor.hpp
src/core/common/networkmanager/: CMakeLists.txt  networkmanager.md
src/core/common/nodeconfig/: CMakeLists.txt
src/core/common/ocispec/: CMakeLists.txt  common.hpp  imagespec.hpp  ocispec.hpp  runtimespec.hpp  serviceconfig.hpp
src/core/common/pkcs11/: CMakeLists.txt  pkcs11.cpp  pkcs11.hpp  privatekey.cpp  privatekey.hpp
src/core/common/spaceallocator/: CMakeLists.txt  spaceallocator.hpp
src/core/common/statushandler/: CMakeLists.txt
src/core/common/tests/: CMakeLists.txt
src/core/common/tools/: CMakeLists.txt  algorithm.hpp  allocator.hpp  array.hpp  buffer.hpp  config.hpp  enum.hpp  error.hpp  fs.cpp  fs.hpp  function.hpp  identifierpool.hpp  list.hpp  log.hpp  logger.hpp  map.hpp  memory.hpp  new.hpp  noncopyable.hpp  optional.hpp  os.hpp  queue.hpp  ringbuffer.hpp  semver.cpp  semver.hpp  string.hpp  thread.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp  utils.hpp  uuid.cpp  uuid.hpp  variant.hpp
src/core/iam/: CMakeLists.txt  config.hpp
src/core/sm/: CMakeLists.txt  config.hpp
src/iam/: CMakeLists.txt
src/iam/certhandler/: certhandler.cpp
src/iam/nodemanager/: nodemanager.cpp
src/sm/: CMakeLists.txt
src/sm/launcher/: instance.cpp  launcher.cpp
src/sm/layermanager/: layermanager.cpp
src/sm/networkmanager/: log.hpp  networkmanager.cpp
src/sm/resourcemanager/: resourcemanager.cpp
src/sm/servicemanager/: servicemanager.cpp
tests/cm/: CMakeLists.txt
tests/cm/identifierpool/: identifierpool_test.cpp
tests/cm/launcher/: launcher_test.cpp
(+696 files in other folders)
