# ######################################################################################################################
# Dependencies
# ######################################################################################################################

set(CMAKE_MODULE_PATH ${AOS_CORE_LIB_ROOT_DIR}/cmake)

# ######################################################################################################################
# Includes
# ######################################################################################################################

include_directories(${AOS_CORE_LIB_ROOT_DIR}/include)

# ######################################################################################################################
# Targets
# ######################################################################################################################

add_subdirectory(common)
add_subdirectory(sm)
add_subdirectory(iam)
