#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Dependencies
# ######################################################################################################################

include(AddModule)

# ######################################################################################################################
# Target properties
# ######################################################################################################################

set(TARGET_NAMESPACE aos)
set(TARGET_PREFIX aos)
set(TARGET_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
set(HEADERS_BASE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

# ######################################################################################################################
# Subdirectories
# ######################################################################################################################

add_subdirectory(core)
