#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target properties
# ######################################################################################################################

set(TARGET_NAMESPACE ${TARGET_NAMESPACE}::core)
set(TARGET_PREFIX ${TARGET_PREFIX}_core)

# ######################################################################################################################
# Subdirectories
# ######################################################################################################################

add_subdirectory(common)
