#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Config
# ######################################################################################################################

if(WITH_TEST)
    add_definitions(-include ${CMAKE_CURRENT_SOURCE_DIR}/testconfig.hpp)
endif()

# ######################################################################################################################
# Target properties
# ######################################################################################################################

set(TARGET_NAMESPACE ${TARGET_NAMESPACE}::core)
set(TARGET_PREFIX ${TARGET_PREFIX}_core)

# ######################################################################################################################
# Subdirectories
# ######################################################################################################################

add_subdirectory(common)
