#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME cloudprotocol)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS
    alerts.hpp
    certificates.hpp
    common.hpp
    desiredstatus.hpp
    envvars.hpp
    log.hpp
    monitoring.hpp
    protocol.hpp
    provisioning.hpp
    servicediscovery.hpp
    state.hpp
    unitstatus.hpp
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(TARGET_NAME ${TARGET_NAME} HEADERS ${HEADERS})

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
