#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME imagemanager)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES imagemanager.cpp)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS
    config.hpp
    imagemanager.hpp
    itf/blobinfoprovider.hpp
    itf/imagemanager.hpp
    itf/iteminfoprovider.hpp
    itf/itemstatusprovider.hpp
    itf/storage.hpp
)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::core::cm::fileserver aos::core::common::crypto aos::core::common::downloader
              aos::core::common::ocispec aos::core::common::spaceallocator aos::core::common::tools
)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    HEADERS
    ${HEADERS}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
