#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME launcher)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES balancer.cpp imageinfoprovider.cpp instance.cpp instancemanager.cpp launcher.cpp node.cpp nodemanager.cpp)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS
    imageinfoprovider.hpp
    itf/instancerunner.hpp
    itf/instancestatusreceiver.hpp
    itf/launcher.hpp
    itf/monitoringprovider.hpp
    itf/sender.hpp
    itf/storage.hpp
)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::core::common::tools)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    HEADERS
    ${HEADERS}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
