#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Target name
# ######################################################################################################################

set(TARGET_NAME nodeinfoprovider)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES nodeinfocache.cpp nodeinfoprovider.cpp)

# ######################################################################################################################
# Headers
# ######################################################################################################################

set(HEADERS itf/nodeinfoprovider.hpp itf/sminforeceiver.hpp)

# ######################################################################################################################
# Libraries
# ######################################################################################################################

set(LIBRARIES aos::core::common::iamclient aos::core::common::tools aos::core::iam::nodeinfoprovider)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_module(
    TARGET_NAME
    ${TARGET_NAME}
    LOG_MODULE
    STACK_USAGE
    ${AOS_STACK_USAGE}
    SOURCES
    ${SOURCES}
    HEADERS
    ${HEADERS}
    LIBRARIES
    ${LIBRARIES}
)

# ######################################################################################################################
# Tests
# ######################################################################################################################

if(WITH_TEST)
    add_subdirectory(tests)
endif()
